<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <!-- Top Menu -->
    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fab_margin"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/song_list"
            style="@style/MenuStyle"
            android:background="@color/category_songs"
            android:text="@string/title_activity_song_list" />

        <TextView
            android:id="@+id/playlists"
            style="@style/MenuStyle"
            android:background="@color/category_playlists"
            android:text="@string/title_activity_playlist" />

        <TextView
            android:id="@+id/music_store"
            style="@style/MenuStyle"
            android:background="@color/category_store"
            android:text="@string/title_activity_music_store" />

    </LinearLayout>

    <!-- Selector -->
    <ListView
        android:id="@+id/song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/player"
        android:layout_below="@+id/menu"
        android:drawSelectorOnTop="true" />

    <!-- Player -->
    <LinearLayout
        android:id="@+id/player"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fab_margin"
        android:layout_alignParentBottom="true"
        android:background="@color/category_playing"
        android:orientation="horizontal">


        <TextView
            style="@style/NowPlayingStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/player_now_playing_title" />

        <TextView
            android:id="@+id/now_playing"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ellipsize="marquee"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/player_default_message"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <!-- Floating action button -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        style="@style/FloatingActionButtonStyle"
        app:backgroundTint="@color/category_playing"
        app:srcCompat="@android:drawable/ic_media_play" />
</RelativeLayout>





